# nonebot_plugin_amrita

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  future-request.yml  question.yml
.github/workflows/: publish.yml
data/nonebot_plugin_orm/migrations/nonebot_plugin_amrita/: 072361e8936f_init.py
nonebot_plugin_amrita/: __init__.py  agent.py  backends.py  cache.py  config.py  database.py  dirty.py  hooks.py  lock.py  memory.py
nonebot_plugin_amrita/migrations/: 072361e8936f_init.py
